fix(my-services): fix overflow in my-services page card

--- a/src/app/dashboard/pages/my-services-page/components/filter-bar/filter-bar.component.less
+++ b/src/app/dashboard/pages/my-services-page/components/filter-bar/filter-bar.component.less
@@ -1,6 +1,16 @@
+.icon-color-changer() {
+  filter: invert(1) sepia(1) saturate(5) hue-rotate(175deg);
+}
+
 .tab {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
+
+  &:hover {
+    .tab-icon {
+      .icon-color-changer();
+    }
+  }
 }
 
 .tab-name {
@@ -10,9 +20,10 @@
 .tab-icon {
   width: 3rem;
   height: 3rem;
+  transition: all 0.3s;
 
   &.active {
-    filter: invert(1) sepia(1) saturate(5) hue-rotate(175deg);
+    .icon-color-changer();
     border-bottom: none;
   }
 }
