--- a/src/app/dashboard/pages/my-services-page/my-services-page.component.less
+++ b/src/app/dashboard/pages/my-services-page/my-services-page.component.less
@@ -6,6 +6,7 @@
   margin-top: 8rem;
   height: 80vh;
   width: 80%;
+  overflow: hidden;
 }
 
 .services-header {
@@ -32,6 +33,5 @@
 }
 
 .filter-selector {
-  padding: 1.8rem;
-  padding-bottom: 0;
+  padding-top: 1.8rem;
 }
